{
    "name": "PlayerInputs",
    "maps": [
        {
            "name": "Inputs",
            "id": "edde6b0a-ffb1-4fb4-8253-93111322ee38",
            "actions": [
                {
                    "name": "Move",
                    "type": "PassThrough",
                    "id": "3cff3e2c-3fbd-473e-a09e-cec93c922e5a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "Jump",
                    "type": "PassThrough",
                    "id": "99057634-06d3-4e90-b2ee-b1d81217b130",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "TouchPress",
                    "type": "PassThrough",
                    "id": "0265133f-655e-43b7-95fc-08f846688867",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "TouchPosition",
                    "type": "PassThrough",
                    "id": "8a72b314-adb2-4be4-8e66-c93525273b0b",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "TouchPositionTest",
                    "type": "PassThrough",
                    "id": "62f0c66b-8f54-4d9a-a0df-40d4148ecc66",
                    "expectedControlType": "Integer",
                    "processors": "",
                    "interactions": "Press"
                }
            ],
            "bindings": [
                {
                    "name": "Sideways",
                    "id": "f226f0f6-e756-4bb4-bd12-b95a3be105c0",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "6ca986db-4f22-4ab6-bbb7-564e83f38d81",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "ae068d27-293d-4b05-83eb-3f5cd5a3fcbc",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "f72f0a91-7bb2-4759-b243-4eeb7ed35773",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "66e3484f-756d-462e-b890-2642fae04440",
                    "path": "<Touchscreen>/touch0/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "Smartphone",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d8304184-1e7d-466d-9cd0-4c3fc1ee6306",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "Smartphone",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1d9a6e6d-1e55-45c8-8db0-078d76d906a3",
                    "path": "<Touchscreen>/primaryTouch",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPositionTest",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Smartphone",
            "bindingGroup": "Smartphone",
            "devices": [
                {
                    "devicePath": "<Touchscreen>",
                    "isOptional": true,
                    "isOR": false
                }
            ]
        }
    ]
}